<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_mother"
        android:key="preference_category_personal_data">

        <com.momilk.momilk.DatePreference
            android:key="@string/preference_mother_birth_date_key"
            android:title=""
            />


        <PreferenceScreen
            android:key="@string/preference_personal_data_key"
            android:title="@string/preference_personal_data_title"
            android:summary="@string/preference_personal_data_summary"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preference_category_baby"
        android:key="preference_category_system">

        <PreferenceScreen
            android:key="@string/preference_default_device_key"
            android:title="@string/preference_default_device_title"
            android:summary="TODO: show currently chosen device here"/>

        <com.momilk.momilk.AutoSummaryUpdateListPreference
            android:key="@string/preference_language_key"
            android:title="@string/preference_language_title"
            android:defaultValue="en-US"
            android:entries="@array/preference_language_aliases"
            android:entryValues="@array/preference_language_values"/>

        <PreferenceScreen
            android:key="@string/preference_clear_history_key"
            android:title="@string/preference_clear_history_title"/>



    </PreferenceCategory>

</PreferenceScreen>