<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_personal_data"
        android:key="preference_category_personal_data">


        <PreferenceScreen
            android:key="preference_personal_data"
            android:title="@string/preference_personal_data_title"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/preference_category_system"
        android:key="preference_category_system">

        <PreferenceScreen
            android:key="preference_default_device"
            android:title="@string/preference_default_device_title"
            android:summary="TODO: show currently chosen device here"/>

        <EditTextPreference
            android:key="preference_calibration"
            android:title="@string/preference_calibration_title"
            android:inputType="numberDecimal"/>

        <com.momilk.momilk.AutoSummaryUpdateListPreference
            android:key="preference_language"
            android:title="@string/preference_language_title"
            android:defaultValue="en-US"
            android:entries="@array/preference_language_aliases"
            android:entryValues="@array/preference_language_values"/>

        <PreferenceScreen
            android:key="preference_clear_history"
            android:title="@string/preference_clear_history_title"/>

    </PreferenceCategory>

</PreferenceScreen>