<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/send_msg_edt"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:hint="@string/send_msg_hint"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/send_msg_btn"
        android:id="@+id/send_msg_btn"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/received_msg_txt"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="start"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/received_msg_list"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>



</LinearLayout>